# api-gateway-python

./: .dockerignore  API_GATEWAY_DESIGN_SPEC.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  RUNBOOK.md  api_gateway_assessment.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
config/: .env.example  gateway.development.yaml  gateway.production.yaml  gateway.yaml
docs/: DEPLOYMENT.md  RUNBOOK.md
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml.template  service.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  secret.yaml.template  service.yaml
k8s/monitoring/: grafana-dashboard.json  prometheus-rules.yaml  servicemonitor.yaml
monitoring/: alerts.yaml  grafana-dashboard-configmap.yaml  grafana-dashboard.json  servicemonitor.yaml
prompts/: design-spec.md
scripts/: build-lambda.sh
src/gateway/: __init__.py  __main__.py  lambda_handler.py
src/gateway/core/: __init__.py  config.py  dynamodb_store.py  gateway.py  handler.py  logging.py  metrics.py  middleware.py  rate_limit.py  routing.py  server.py  session_store.py
src/gateway/middleware/: __init__.py  auth.py  proxy.py  ratelimit.py
terraform/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
terraform/modules/custom-domain/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
tests/: README.md  conftest.py
tests/integration/: __init__.py  conftest.py  test_authentication.py  test_e2e_flow.py  test_proxy.py  test_rate_limiting.py
tests/performance/: README.md  __init__.py  locustfile.py
tests/unit/: test_auth.py  test_config.py  test_logging.py  test_metrics.py  test_middleware.py  test_proxy.py  test_rate_limit.py  test_routing.py  test_session_store.py
